--- a/public_html/phalcon/SosCredit_test_task/app/views/index/new.phtml
+++ b/public_html/phalcon/SosCredit_test_task/app/views/index/new.phtml
@@ -1,8 +1,18 @@
+<?php 
+include('header.phtml');
 
-<?php echo $this->tag->form(array('index/create')); ?>
+echo '<h1>New Message</h1>';
+
+echo $this->tag->form(array('index/create')); ?>
 
 <?php
     include('fieldset.phtml');
 ?>
 
 </form>
+
+<?php
+
+include('footer.phtml');
+
+?>
